environments/production/control-plane/kube-apiserver-ha.yaml

apiVersion: v1
kind: Pod
metadata:
  name: kube-apiserver
spec:
  replicas: 3  # Redundant setup for high availability
  containers:
  - name: kube-apiserver
    image: k8s.gcr.io/kube-apiserver:v1.22.2
    ports:
    - containerPort: 6443
